<resources>
    <string name="app_name">Challenge</string>
    <string name="browser_name">Browser Name : </string>
    <string name="created_date">Created Date : </string>
    <string name="url">URL : </string>


    <string name="accessibility_service_description">This access allows to the app to view specific words</string>
    <string name="touch_to_open_the_app">Touch to open the app</string>
    <string name="not_founf_link">Not Found Link</string>
    <string name="start">Start</string>
    <string name="draw_over_other_app">Draw Over Other App :</string>
    <string name="accessibility_service">Accessibility Service :</string>
    <string name="there_are_no_items_to_display">There are no items to display!</string>
    <string name="clear_data">Clear data</string>
    <string name="cancel">cancel</string>
    <string name="one_specific_word_detected">One specific word detected !</string>

</resources>