<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.HomeActivity">

    <LinearLayout
        android:id="@+id/accessibility_service_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin_2"
        android:paddingLeft="@dimen/margin_2"
        android:paddingRight="@dimen/margin_2"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/round_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/accessibility_service_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/accessibility_service"
            android:textSize="20sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/accessibility_service_switch_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/draw_over_other_app_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin_2"
        android:background="@drawable/round_layout"
        android:paddingLeft="@dimen/margin_2"
        android:paddingRight="@dimen/margin_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accessibility_service_layout">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/draw_over_other_app_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/draw_over_other_app"
            android:textSize="20sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/draw_over_other_app_switch_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/draw_over_other_app_layout"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/show_log_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_3"
            app:layout_constraintBottom_toTopOf="@+id/clear_all"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/clear_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_2"
            android:text="@string/clear_data"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/empty_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/draw_over_other_app_layout"
        android:visibility="visible">

        <TextView
            android:id="@+id/empty_tv"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/there_are_no_items_to_display"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cancel_presentation"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/empty_tv"/>
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>